Omnibox: Fix Copy URL Adjustment interaction with ZeroSuggest.

The Copy URL adjustment code interacts poorly with ZeroSuggest, because
it is subtly wrong.

To be specific: If the popup is open, it would use the current match's
URL even if the input text is not an exact match.

This mostly affected MacOS.

This CL fixes the bug and adds a test.

Bug: 838541
Change-Id: Ia6e5d58aa473033c8f17783ce7fbcbce3b687938
Reviewed-on: https://chromium-review.googlesource.com/1059857
Commit-Queue: Tommy Li <tommycli@chromium.org>
Reviewed-by: Mark Pearson <mpearson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559149}
Former-commit-id: 64c9a03e10835c6ba7013b7a52df14867029fecf